v0.0.1-beta/_sources/docs/Project/Create_Project.md.txt
#  Create a New Project

This guide walks you through the essential steps to create a project in the Data Catalog. 
Creating a project is **simple** and **flexible** and all users can create projects.

```{tip}
Keep in mind that you can update the project metadata at **any time**.
```

## Step 1: Navigate to the Project List Page 
* Click the **`Projects`** button on the Data Catalog welcome page 

    **or** 
    
* Use the **`Projects`** tab located at the top of any page.

Both options will take you to the Project List page, where you can browse, or create a new project.





## Step 2: Add a New Project
On the Project List page, click the **`Add a new project`** button located right below the ***Search*** bar.



## Step 3: Fill in Project Metadata
Complete all the required fields marked with **`*`**:

* Project Title (**`*`**)
* Project Description (**`*`**)
* Access Rights (**`*`**)
* Principal Investigator (PI) (**`*`**)


## Final Step: Complete Project Creation
Click **`Create project`** at the ***bottom*** of the page to complete the process.

<br/>

-------------------------------

<br/>

```{figure} ../../_static/images/project_creation_3.gif
:alt: Project Creation
:width: 93%
:align: center

*Project Creation*
```
----------------------------

<br/>


```{note}
Some fields on the project creation page are automatically generated by the system, such as **Project Identifier**, **Date Created**, **Project Creator**, **Project Status**, and **Access Rights**. Some of these fields cannot be edited.
```

<br/>

---------------------------

## Access Rights and Visibility
Projects have two access rights settings:

* **BRIGHT-visible:** 
    * Project metadata is visible (read-only) to all BRIGHT employees. However, visibility of datasets depends on each dataset's individual access rights.

* **Restricted:** 
    * The project is only visible to users who have been explicitly granted read access.

➣ By default, projects are set to **BRIGHT-visible**, but you can change the access rights when creating or editing a project.


Understanding how access rights affect visibility is important for collaboration:

```{note}

Users without assigned permissions follow the project’s access rights:

→ For **BRIGHT-visible** projects: They can view metadata but cannot see files or upload/download data.

→ For **Restricted** projects: They cannot see any project information.

```








