v0.1.4-beta/_sources/docs/Project/Create_Project.md.txt
#  Create a New Project

This guide walks you through the essential steps to create a project in Data Catalog. 
Creating a project is **simple** and **flexible** and all users can create projects.

```{tip}
Keep in mind that you can update the project metadata at **any time**.
```

## Step 1: Navigate to the Project List Page 
* Click the **`Projects`** button on the Data Catalog welcome page 

    **or** 
    
* Use the **`Projects`** tab located at the top of any page.

Both options will take you to the Project List page, where you can browse, or create a new project.





## Step 2: Add a New Project
On the Project List page, click the **`Add a new project`** button located right below the ***Search*** bar.



## Step 3: Fill in Project Metadata
Complete all the required fields marked with **`*`**:

* Project Title (**`*`**)
* Project Description (**`*`**)
* Access Rights (**`*`**)
* Principal Investigator (PI) (**`*`**)
* LIMS (Benchling) project URL _(must start with **https://bright.benchling.com**)_


```{tip}

To find the Benchling project URL, log in to Benchling, open the **Projects** section in the left sidebar, and select the project you want.  
Click the **settings** button (<img src="../../_static/images/settings_button.png" alt="open_icon" style="height:1.2em; vertical-align:text-bottom;">) next to the project name and choose **Copy project link**.

```


## Final Step: Complete Project Creation
Click **`Create project`** at the ***bottom*** of the page to complete the process.

<br/>

-------------------------------

<br/>

```{raw} html
<div style="text-align: center;">
  <video width="93%" controls autoplay loop muted playsinline>
    <source src="../../_static/images/project-creation-updated2.mp4" type="video/mp4">
  </video>
  <p><em>Project Creation</em></p>
</div>
```

----------------------------

<br/>

```{note}
Some fields on the project creation page are automatically generated by the system, such as **Project Identifier**, **Date Created**, **Project Creator**, **Project Status**, and **Access Rights**. Some of these fields cannot be edited.
```

<br/>

---------------------------

## Access Rights and Visibility
Projects have two access rights settings:

* **BRIGHT-visible:** 
    * Project metadata is visible (read-only) to all BRIGHT employees. However, visibility of datasets depends on each dataset's individual access rights.

* **Restricted:** 
    * The project is completely hidden to all BRIGHT employees, except from users who have been explicitly granted permissions.

➣ By default, projects are set to **BRIGHT-visible**, but you can change the access rights when creating or editing a project.


Understanding how access rights affect visibility is important for collaboration:

```{note}

Users without assigned permissions (see: {ref}`manage-project-user-permissions`) follow the project access rights:

→ For **BRIGHT-visible** projects: Metadata is visible (read-only) to all BRIGHT employees

→ For **Restricted** projects: Project is completely hidden

```

------------------------------------------
(Datasets-tab)=
## Add Datasets to Project

Once you have created the project, you can **create a new dataset** from the **Datasets** tab, and it will be automatically added to the project. <br/>
You can also **add** additional existing datasets from the same **Datasets** tab on the project home page. This helps you associate the project with other datasets that are relevant to your research.

### To add another dataset to a project:

1. Click the `Datasets` tab on the project home page

2. Select the dataset you want to add from the list

3. Click `Link` to complete the process


To remove the relationship:

   * Click `Unlink`, and the dataset will be removed


```{note}
To add a dataset to a project, two conditions must be met:

→ You must have the **Can Add Datasets** permission on the project you want to add the dataset to
<br/>
→ You must have **access to the dataset** (either Bright-visible or through a dataset user permission, if it is restricted)

If either of these is missing, you will not be able to proceed.
```


<br/>

```{figure} ../../_static/images/link-datasets-to-project.png
:alt: Add Datasets to Project
:width: 93%
:align: center

*Add Datasets to Project*
```


```{note}
This relationship also appears under the **Projects** tab on the **dataset home page**.
```

-------------------------------- 

## API Availability

The actions described in this page can also be performed programmatically. For more details, see the following endpoints in the API Reference:

* [**/projects**](https://datacatalog.bright.dtu.dk/api/docs#/projects/create_project_projects_post)
* [**/projects-datasets**](https://datacatalog.bright.dtu.dk/api/docs#/projects-datasets)